# courtside-analytics

./: .env.example  .gitignore  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
agent/: config.py  db.py  entities.py  insight.py  intents.py  metrics.py  ollama_client.py  pipeline.py  query_spec.py  schema_context.py  spec_builder.py  spec_sql.py  sql_fallback.py  sql_validator.py  templates.py  types.py
analytics/: evaluation.py  visualization.py
cli/: main.py
data/benchmarks/: questions.json
data_ingestion/: README.md  column_aliases.py  config.py  data_contract.md  file_discovery.py  loaders.py  normalize.py  profile_source.py  run_etl.py
database/: README.md  audit_db.py  sanity_checks.sql  schema.sql  setup_db.py
docs/: architecture.md  plan_v4.md  source_setup.md
fixtures/sample/: games.csv  player_game_stats.csv  players.csv  teams.csv
scripts/: bootstrap_sample_data.py  evaluate_benchmark.py
tests/: test_cli.py  test_entities.py  test_evaluation.py  test_insight.py  test_intents.py  test_profile_source.py  test_query_spec.py  test_question_coverage.py  test_spec_sql.py  test_sql_guardrails.py  test_templates.py  test_visualization.py
